<resources>
    <string name="app_name">HealthyCaller</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="last_week">Last week</string>
    <string name="last_call_title">Last call:</string>
    <string name="longest_call_title">The longest call:</string>
    <string name="summary_time_title">Summary time:</string>
    <string name="summary_title">Summary</string>
    <string name="summary_call_time">Summary call time:</string>
</resources>
